gccida/c1/get_narrower
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_narrower/src/tree.c:4707:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_narrower/src/tree.c:4709:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_narrower/src/tree.c:4758:22: error: expected expression
v11 = *( tree_node **)( *( _QWORD *)( low + 40) + 40LL); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_narrower/src/tree.c:4758:10: error: use of undeclared identifier 'tree_node'
v11 = *( tree_node **)( *( _QWORD *)( low + 40) + 40LL); 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_narrower/src/obj/tree.o] Error 1
